# ChickenHook

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  azure-pipelines-1.yml  azure-pipelines.yml  build.gradle  build.xml  gradle.properties  gradlew.bat  kso_config.json  settings.gradle
androidTest/: CMakeLists.txt  build.gradle
androidTest/src/androidTest/java/com/chickenhook/vmcracker/: CraftetBinderCalls.kt  CrashmeTests.kt  RegressionTest.kt
androidTest/src/androidTest/java/com/self/vmcracker/: ExampleInstrumentedTest.kt  RegressionTest.kt
androidTest/src/main/: AndroidManifest.xml
androidTest/src/main/cpp/: TransactionCreator.cpp  TransactionCreator.h  native-lib.cpp
androidTest/src/main/java/com/self/vmcracker/: MainActivity.kt  WebViewActivity.kt
androidTest/src/main/java/org/chickenhook/demoapp/: AppApplication.java  MainActivity.kt  MyBinder.kt  NativeLib.kt  RemoteService.kt  WebViewActivity.kt
androidTest/src/main/res/layout/: activity_main.xml  activity_web_view.xml
androidTest/src/main/res/values/: strings.xml
androidTest/src/test/java/com/chickenhook/vmcracker/: ExampleUnitTest.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/JniAddressFinder/: JniAddressFinder.cpp  JniAddressFinder.h
app/src/main/cpp/MapsParser/: MapsParser.cpp  MapsParser.h
app/src/main/cpp/hooker/: injector.cpp  injector.h  trampoline.cpp  trampoline.h
app/src/main/java/com/self/vmcracker/: AppApplication.java  MainActivity.kt  MemoryAllocator.java
app/src/main/java/com/self/vmcracker/hook/: ActivityHooker.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/self/vmcracker/: ExampleUnitTest.kt
beaengine-configure/: CMakeLists.txt.in
examples/: easy-usage.cpp
gradle/wrapper/: gradle-wrapper.properties
linuxTest/: CMakeLists.txt  main.cpp
macTest/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  chickenhook.cpp  hooking.cpp  logging.cpp  trampoline.cpp
src/hooker/: injector.cpp  trampoline.cpp
src/include/chickenHook/: chickenhook.h  hooking.h  injector.h  logging.h  trampoline.h
src/instsHelper/: arm64_insts_helper.h  x86_64_insts_helper.h  x86_insts_helper.h
